.local/share/xmobar/xmobar.errors

xmobar.hs:48:74: error:
    lexical error in string/character literal at character '\61641'
   |
48 |        , template         = " <action=`mygtkmenu .menurc` button=1><fn=5>ïƒ‰</fn></action> <action=`xdotool key 0xffeb+0xff1b` button=3><action=`xdotool key 0xffe3+0xffe9+0xff51` button=4><action=`xdotool key 0xffe3+0xffe9+0xff53` button=5>%UnsafeStdinReader%</action></action></action> <action=`mygtkmenu .placerc` button=1><action=`XMUptimeToggle` button=3><fn=5>ï´</fn></action></action>   <action=`xdotool key 0xffeb+0xffe1+0x7a`>  </action>|<action=`XMDateToggle` button=1><action=`XMGSimplecal` button=3><action=`XMCal` button=45>  <fn=1><fc=#ccc>  </fc></fn></action></action></action>  <fc=#ccc><action=`XMGWeather` button=1>   </action><fn=2> </fn><action=`XMAccuWeather` button=1></action></fc>|     <action=`XMNetToggle` button=1><action=`xdg-open http://192.168.0.1` button=2><action=`XMVnstat+h` button=3><action=`XMifconfig` button=45>   </action></action></action></action> <action=`systemctl poweroff`> Shutdown </action> <action=`XMTrafToggle` button=1><action=`XMTransgui` button=3><action=`XMVnstat-m` button=4><action=`XMVnstat-d` button=5>   </action></action></action></action>     <action=`XMCPUToggle` button=1><fc=#ccc>ï„ˆ</fc></action>  <action=`XMTempToggle` button=1><action=`XMSensors` button=3><fc=#ccc> ğŸ“… </fc></action></action>   <action=`XMMemToggle` button=1><fc=#ccc>ïˆ³</fc></action>  <action=`XMVolToggle` button=1><action=`XMPavucontrol` button=2><action=`XMMute` button=3><action=`pulseaudio-ctl down` button=4><action=`pulseaudio-ctl up` button=5></action></action></action></action></action>  %VOL%       <action=`XMToggleAll` button=1><action=`XMCleanAll` button=3><fc=#ccc> ï…‚ </fc></action></action>"
   |                                                                          ^
